Fix some issues with home page photo gallery
It still doesn’t align properly but there seems to be no reason for this behavior. The only possible reason seems to be badly computed grid – but still, there has been no change in style.

--- a/theme/stylesheets/application.css
+++ b/theme/stylesheets/application.css
@@ -7456,7 +7456,12 @@ input[type='checkbox'] {
   border: 5px solid #dab77f; }
 
 .img-intro img {
-  border: 5px solid #dab77f; }
+  border: 5px solid #dab77f;
+  object-fit: cover; }
+
+.img-intro__homepage img {
+  width: 113px;
+  height: 103px; }
 
 .img-intro__right,
 .img-full__right {
